# RedForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/redforge/: __init__.py
src/redforge/adapters/: __init__.py  httpx.py  katana.py  subfinder.py  technology_detection.py
src/redforge/capabilities/: __init__.py  asset_intelligence.py  health.py  http_probe.py  subdomain_discovery.py  technology_detection.py  web_crawl.py
src/redforge/domain/: __init__.py  asset.py  asset_association.py  asset_intelligence.py  endpoint.py  evidence.py  finding.py  host.py  service.py  target.py  technology.py
src/redforge/runtime/: __init__.py  discovery.py  exceptions.py  pipeline.py  pipeline_state.py  registry.py  runtime.py
src/redforge/sdk/: __init__.py  capability.py  context.py  result.py
tests/: test_discovery.py  test_health_capability.py  test_subdomain_discovery.py  test_subfinder_adapter.py  test_version.py
tests/adapters/: test_httpx.py  test_katana.py  test_technology_detection.py
tests/capabilities/: test_asset_intelligence.py  test_http_probe.py  test_technology_detection.py  test_web_crawl.py
tests/domain/: test_asset_intelligence.py
tests/fixtures/whatweb/: multiple_targets.json
tests/runtime/: test_pipeline.py
